--- a/hw_1/hw_1_assignment.ipynb
+++ b/hw_1/hw_1_assignment.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
     "    for f in range(nimgs):\n",
     "        fft = sp.signal.fftconvolve(base, raw[::-1,::-1,f], mode='full')\n",
     "        fft_peak = unravel_index(fft.argmax(), fft.shape)\n",
-    "        shift[f,:] = np.array([nrows, ncols] - np.array(fft_peak) - 1)\n",
+    "        shift[f,:] = np.array(fft_peak) - np.array([nrows, ncols])\n",
     "        \n",
     "    return shift\n",
     "        \n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,112 +374,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "offset between base im2-0 & im2-10: [-34.67   2.67]\n",
-      "offset between base im2-0 & im2-9: [ 0.   26.67]\n",
-      "offset between base im2-0 & im2-8: [-21.67  12.  ]\n",
-      "offset between base im2-0 & im2-7: [ 0.   40.33]\n",
-      "offset between base im2-0 & im2-6: [-44.67 -24.  ]\n",
-      "offset between base im2-0 & im2-5: [ -2.33 -11.  ]\n",
-      "offset between base im2-0 & im2-4: [ 0.   -0.33]\n",
-      "offset between base im2-0 & im2-99: [-31.   2.]\n",
-      "offset between base im2-0 & im2-98: [-48.33 -15.33]\n",
-      "offset between base im2-0 & im2-97: [-5.33 -5.33]\n",
-      "offset between base im2-0 & im2-96: [-35.     6.33]\n",
-      "offset between base im2-0 & im2-95: [ 0.   18.33]\n",
-      "offset between base im2-0 & im2-94: [-40.   -15.67]\n",
-      "offset between base im2-0 & im2-93: [-26.67  51.33]\n",
-      "offset between base im2-0 & im2-92: [-37.67 -18.67]\n",
-      "offset between base im2-0 & im2-91: [-29.67  -3.67]\n",
-      "offset between base im2-0 & im2-90: [-62. -30.]\n",
-      "offset between base im2-0 & im2-89: [-5.   18.33]\n",
-      "offset between base im2-0 & im2-88: [-21.67 -30.  ]\n",
-      "offset between base im2-0 & im2-87: [-63.     5.33]\n",
-      "offset between base im2-0 & im2-86: [-72.33  14.33]\n",
-      "offset between base im2-0 & im2-85: [-36.  -3.]\n",
-      "offset between base im2-0 & im2-84: [18.67  0.  ]\n",
-      "offset between base im2-0 & im2-83: [-18.  25.]\n",
-      "offset between base im2-0 & im2-82: [-48.   -12.67]\n",
-      "offset between base im2-0 & im2-81: [-31.67  10.  ]\n",
-      "offset between base im2-0 & im2-80: [-19.    31.67]\n",
-      "offset between base im2-0 & im2-79: [-42.33  13.67]\n",
-      "offset between base im2-0 & im2-78: [-19.33  24.33]\n",
-      "offset between base im2-0 & im2-77: [-24.33  22.  ]\n",
-      "offset between base im2-0 & im2-76: [8.   3.33]\n",
-      "offset between base im2-0 & im2-75: [-23.    -2.67]\n",
-      "offset between base im2-0 & im2-74: [ 2.67 19.  ]\n",
-      "offset between base im2-0 & im2-73: [-9.33 36.33]\n",
-      "offset between base im2-0 & im2-72: [-26.33   3.67]\n",
-      "offset between base im2-0 & im2-71: [-5.33  1.  ]\n",
-      "offset between base im2-0 & im2-70: [-18.67   0.33]\n",
-      "offset between base im2-0 & im2-69: [-21.33  18.67]\n",
-      "offset between base im2-0 & im2-68: [-35.33  19.67]\n",
-      "offset between base im2-0 & im2-67: [-35.33 -12.  ]\n",
-      "offset between base im2-0 & im2-66: [ 2.67 48.33]\n",
-      "offset between base im2-0 & im2-65: [-5.33  2.33]\n",
-      "offset between base im2-0 & im2-64: [-16.    40.67]\n",
-      "offset between base im2-0 & im2-63: [-9.67 29.33]\n",
-      "offset between base im2-0 & im2-62: [16.33 14.33]\n",
-      "offset between base im2-0 & im2-61: [-65.33   7.33]\n",
-      "offset between base im2-0 & im2-60: [-7.67 23.33]\n",
-      "offset between base im2-0 & im2-59: [-37.67  35.  ]\n",
-      "offset between base im2-0 & im2-58: [-7.67  8.  ]\n",
-      "offset between base im2-0 & im2-57: [ 0.   21.33]\n",
-      "offset between base im2-0 & im2-56: [ 4.33 -7.  ]\n",
-      "offset between base im2-0 & im2-55: [-21.67  12.33]\n",
-      "offset between base im2-0 & im2-54: [-29.33  45.67]\n",
-      "offset between base im2-0 & im2-53: [ 0.   10.33]\n",
-      "offset between base im2-0 & im2-52: [-22.33  47.33]\n",
-      "offset between base im2-0 & im2-51: [-18.67  19.33]\n",
-      "offset between base im2-0 & im2-50: [-43.33  -2.67]\n",
-      "offset between base im2-0 & im2-49: [-46.   2.]\n",
-      "offset between base im2-0 & im2-48: [-45.67  -9.67]\n",
-      "offset between base im2-0 & im2-47: [-26.67  33.  ]\n",
-      "offset between base im2-0 & im2-46: [-16.67  30.67]\n",
-      "offset between base im2-0 & im2-45: [-2.33 49.33]\n",
-      "offset between base im2-0 & im2-44: [-20.67  -3.33]\n",
-      "offset between base im2-0 & im2-43: [-26.67   8.  ]\n",
-      "offset between base im2-0 & im2-42: [-30.67  -4.33]\n",
-      "offset between base im2-0 & im2-41: [-37.67   0.67]\n",
-      "offset between base im2-0 & im2-40: [-27.   3.]\n",
-      "offset between base im2-0 & im2-39: [-15. -45.]\n",
-      "offset between base im2-0 & im2-38: [-18.33  14.67]\n",
-      "offset between base im2-0 & im2-37: [-32.67 -17.  ]\n",
-      "offset between base im2-0 & im2-36: [-53. -21.]\n",
-      "offset between base im2-0 & im2-35: [-35.   0.]\n",
-      "offset between base im2-0 & im2-34: [ 0.   37.33]\n",
-      "offset between base im2-0 & im2-33: [-56.33  19.  ]\n",
-      "offset between base im2-0 & im2-32: [-27.33  -5.67]\n",
-      "offset between base im2-0 & im2-31: [-37.67 -29.33]\n",
-      "offset between base im2-0 & im2-30: [-27.    42.33]\n",
-      "offset between base im2-0 & im2-29: [-46.   0.]\n",
-      "offset between base im2-0 & im2-28: [-17.33 -18.67]\n",
-      "offset between base im2-0 & im2-27: [-15.33 -16.33]\n",
-      "offset between base im2-0 & im2-26: [ 0.   55.67]\n",
-      "offset between base im2-0 & im2-25: [-40.33  20.67]\n",
-      "offset between base im2-0 & im2-24: [-37.67  21.  ]\n",
-      "offset between base im2-0 & im2-23: [-5.33 35.67]\n",
-      "offset between base im2-0 & im2-22: [-16.    32.33]\n",
-      "offset between base im2-0 & im2-21: [-26.33  36.33]\n",
-      "offset between base im2-0 & im2-20: [16.   26.67]\n",
-      "offset between base im2-0 & im2-19: [-13.67   8.  ]\n",
-      "offset between base im2-0 & im2-18: [-36.  32.]\n",
-      "offset between base im2-0 & im2-17: [-18.67  24.  ]\n",
-      "offset between base im2-0 & im2-16: [-38. -11.]\n",
-      "offset between base im2-0 & im2-15: [-59.     6.33]\n",
-      "offset between base im2-0 & im2-14: [-18.67   2.67]\n",
-      "offset between base im2-0 & im2-13: [-8.33 35.  ]\n",
-      "offset between base im2-0 & im2-12: [-20.67   7.67]\n",
-      "offset between base im2-0 & im2-11: [-19.    55.33]\n",
-      "offset between base im2-0 & im2-3: [-59.33 -11.  ]\n",
-      "offset between base im2-0 & im2-2: [-40.67   2.33]\n",
-      "offset between base im2-0 & im2-1: [-2.67 13.  ]\n"
+      "offset between base im2-0 & im2-10: [34.33 -3.  ]\n",
+      "offset between base im2-0 & im2-9: [ -0.33 -27.  ]\n",
+      "offset between base im2-0 & im2-8: [ 21.33 -12.33]\n",
+      "offset between base im2-0 & im2-7: [ -0.33 -40.67]\n",
+      "offset between base im2-0 & im2-6: [44.33 23.67]\n",
+      "offset between base im2-0 & im2-5: [ 2.   10.67]\n",
+      "offset between base im2-0 & im2-4: [-0.33  0.  ]\n",
+      "offset between base im2-0 & im2-99: [30.67 -2.33]\n",
+      "offset between base im2-0 & im2-98: [48. 15.]\n",
+      "offset between base im2-0 & im2-97: [5. 5.]\n",
+      "offset between base im2-0 & im2-96: [34.67 -6.67]\n",
+      "offset between base im2-0 & im2-95: [ -0.33 -18.67]\n",
+      "offset between base im2-0 & im2-94: [39.67 15.33]\n",
+      "offset between base im2-0 & im2-93: [ 26.33 -51.67]\n",
+      "offset between base im2-0 & im2-92: [37.33 18.33]\n",
+      "offset between base im2-0 & im2-91: [29.33  3.33]\n",
+      "offset between base im2-0 & im2-90: [61.67 29.67]\n",
+      "offset between base im2-0 & im2-89: [  4.67 -18.67]\n",
+      "offset between base im2-0 & im2-88: [21.33 29.67]\n",
+      "offset between base im2-0 & im2-87: [62.67 -5.67]\n",
+      "offset between base im2-0 & im2-86: [ 72.   -14.67]\n",
+      "offset between base im2-0 & im2-85: [35.67  2.67]\n",
+      "offset between base im2-0 & im2-84: [-19.    -0.33]\n",
+      "offset between base im2-0 & im2-83: [ 17.67 -25.33]\n",
+      "offset between base im2-0 & im2-82: [47.67 12.33]\n",
+      "offset between base im2-0 & im2-81: [ 31.33 -10.33]\n",
+      "offset between base im2-0 & im2-80: [ 18.67 -32.  ]\n",
+      "offset between base im2-0 & im2-79: [ 42. -14.]\n",
+      "offset between base im2-0 & im2-78: [ 19.   -24.67]\n",
+      "offset between base im2-0 & im2-77: [ 24.   -22.33]\n",
+      "offset between base im2-0 & im2-76: [-8.33 -3.67]\n",
+      "offset between base im2-0 & im2-75: [22.67  2.33]\n",
+      "offset between base im2-0 & im2-74: [ -3.   -19.33]\n",
+      "offset between base im2-0 & im2-73: [  9.   -36.67]\n",
+      "offset between base im2-0 & im2-72: [26. -4.]\n",
+      "offset between base im2-0 & im2-71: [ 5.   -1.33]\n",
+      "offset between base im2-0 & im2-70: [18.33 -0.67]\n",
+      "offset between base im2-0 & im2-69: [ 21. -19.]\n",
+      "offset between base im2-0 & im2-68: [ 35. -20.]\n",
+      "offset between base im2-0 & im2-67: [35.   11.67]\n",
+      "offset between base im2-0 & im2-66: [ -3.   -48.67]\n",
+      "offset between base im2-0 & im2-65: [ 5.   -2.67]\n",
+      "offset between base im2-0 & im2-64: [ 15.67 -41.  ]\n",
+      "offset between base im2-0 & im2-63: [  9.33 -29.67]\n",
+      "offset between base im2-0 & im2-62: [-16.67 -14.67]\n",
+      "offset between base im2-0 & im2-61: [65.   -7.67]\n",
+      "offset between base im2-0 & im2-60: [  7.33 -23.67]\n",
+      "offset between base im2-0 & im2-59: [ 37.33 -35.33]\n",
+      "offset between base im2-0 & im2-58: [ 7.33 -8.33]\n",
+      "offset between base im2-0 & im2-57: [ -0.33 -21.67]\n",
+      "offset between base im2-0 & im2-56: [-4.67  6.67]\n",
+      "offset between base im2-0 & im2-55: [ 21.33 -12.67]\n",
+      "offset between base im2-0 & im2-54: [ 29. -46.]\n",
+      "offset between base im2-0 & im2-53: [ -0.33 -10.67]\n",
+      "offset between base im2-0 & im2-52: [ 22.   -47.67]\n",
+      "offset between base im2-0 & im2-51: [ 18.33 -19.67]\n",
+      "offset between base im2-0 & im2-50: [43.    2.33]\n",
+      "offset between base im2-0 & im2-49: [45.67 -2.33]\n",
+      "offset between base im2-0 & im2-48: [45.33  9.33]\n",
+      "offset between base im2-0 & im2-47: [ 26.33 -33.33]\n",
+      "offset between base im2-0 & im2-46: [ 16.33 -31.  ]\n",
+      "offset between base im2-0 & im2-45: [  2.   -49.67]\n",
+      "offset between base im2-0 & im2-44: [20.33  3.  ]\n",
+      "offset between base im2-0 & im2-43: [26.33 -8.33]\n",
+      "offset between base im2-0 & im2-42: [30.33  4.  ]\n",
+      "offset between base im2-0 & im2-41: [37.33 -1.  ]\n",
+      "offset between base im2-0 & im2-40: [26.67 -3.33]\n",
+      "offset between base im2-0 & im2-39: [14.67 44.67]\n",
+      "offset between base im2-0 & im2-38: [ 18. -15.]\n",
+      "offset between base im2-0 & im2-37: [32.33 16.67]\n",
+      "offset between base im2-0 & im2-36: [52.67 20.67]\n",
+      "offset between base im2-0 & im2-35: [34.67 -0.33]\n",
+      "offset between base im2-0 & im2-34: [ -0.33 -37.67]\n",
+      "offset between base im2-0 & im2-33: [ 56.   -19.33]\n",
+      "offset between base im2-0 & im2-32: [27.    5.33]\n",
+      "offset between base im2-0 & im2-31: [37.33 29.  ]\n",
+      "offset between base im2-0 & im2-30: [ 26.67 -42.67]\n",
+      "offset between base im2-0 & im2-29: [45.67 -0.33]\n",
+      "offset between base im2-0 & im2-28: [17.   18.33]\n",
+      "offset between base im2-0 & im2-27: [15. 16.]\n",
+      "offset between base im2-0 & im2-26: [ -0.33 -56.  ]\n",
+      "offset between base im2-0 & im2-25: [ 40. -21.]\n",
+      "offset between base im2-0 & im2-24: [ 37.33 -21.33]\n",
+      "offset between base im2-0 & im2-23: [  5. -36.]\n",
+      "offset between base im2-0 & im2-22: [ 15.67 -32.67]\n",
+      "offset between base im2-0 & im2-21: [ 26.   -36.67]\n",
+      "offset between base im2-0 & im2-20: [-16.33 -27.  ]\n",
+      "offset between base im2-0 & im2-19: [13.33 -8.33]\n",
+      "offset between base im2-0 & im2-18: [ 35.67 -32.33]\n",
+      "offset between base im2-0 & im2-17: [ 18.33 -24.33]\n",
+      "offset between base im2-0 & im2-16: [37.67 10.67]\n",
+      "offset between base im2-0 & im2-15: [58.67 -6.67]\n",
+      "offset between base im2-0 & im2-14: [18.33 -3.  ]\n",
+      "offset between base im2-0 & im2-13: [  8.   -35.33]\n",
+      "offset between base im2-0 & im2-12: [20.33 -8.  ]\n",
+      "offset between base im2-0 & im2-11: [ 18.67 -55.67]\n",
+      "offset between base im2-0 & im2-3: [59.   10.67]\n",
+      "offset between base im2-0 & im2-2: [40.33 -2.67]\n",
+      "offset between base im2-0 & im2-1: [  2.33 -13.33]\n"
      ]
     }
    ],
@@ -500,46 +500,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corrected = np.empty(pic2_x3_flipped_center.shape)\n",
-    "corrected[:-105,:-72] = pic2_x3[105:,72:]\n",
+    "# init np array for re\n",
+    "raw_imgs_corrected = np.empty(raw_imgs.shape)\n",
     "\n",
-    "plt.figure(figsize=(4,4))\n",
-    "plt.imshow(corrected, cmap='gray')\n",
-    "\n",
-    "plt.figure(figsize=(4,4))\n",
-    "plt.imshow(pic1_x3_center+corrected, cmap='gray')"
+    "for f in range(nfiles-1):\n",
+    "    output = sp.ndimage.interpolation.shift(raw_imgs[:,:,f],offsets[f])\n",
+    "    raw_imgs_corrected[:,:,f] = output\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -555,7 +527,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fnames = glob.glob('data/large_files/im2*.png')\n"
+    "plt.figure(figsize=(8,8))\n",
+    "plt.imshow(raw_imgs_corrected.mean(axis=2),cmap='gray')\n"
    ]
   },
   {
@@ -563,9 +536,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "len(fnames)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
