--- a/hw_1/hw_1_assignment.ipynb
+++ b/hw_1/hw_1_assignment.ipynb
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,19 +1338,19 @@
     "    plt.scatter(possible_periods[peak_period], periodigram[peak_period], c='red')\n",
     "    \n",
     "    # spit out peak period\n",
-    "    return np.round(possible_periods[peak_period],1)"
+    "    return np.round(possible_periods[peak_period],2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "period of moon's orbit: 30.0 days\n"
+      "period of moon's orbit: 29.53 days\n"
      ]
     },
     {
@@ -1373,14 +1373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "year, from tennis: 385.0 days\n"
+      "year, from tennis: 385.39 days\n"
      ]
     },
     {
@@ -1403,14 +1403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "year, from ice cream: 385.0 days\n"
+      "year, from ice cream: 385.39 days\n"
      ]
     },
     {
@@ -1433,14 +1433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "year, from tennis * ice cream: 379.0 days\n"
+      "year, from tennis * ice cream: 378.98 days\n"
      ]
     },
     {
@@ -1466,10 +1466,10 @@
    "metadata": {},
    "source": [
     "**the number of days in a year:**\n",
-    "from moon: 30.0 days\n",
+    "from moon: 29.53 days\n",
     "\n",
     "**the period of the moon's orbit around the Earth:**\n",
-    "best from t"
+    "best from tennis * ice cream: 378.98 days"
    ]
   },
   {
