fixed original plot, hopefully

--- a/hw_2/hw_2.ipynb
+++ b/hw_2/hw_2.ipynb
@@ -73,8 +73,10 @@
    "id": "bccf6e11",
    "metadata": {},
    "source": [
+    "TODO: not sure why original figure isn't showing up on github...\n",
+    "\n",
     "Original plot:\n",
-    "<img src=\"data/large_files/dirdec_postprob_figure.png\" style=\"height: 600px;\"/>\n",
+    "<img src=\"data/dirdec_postprob_figure.png\" style=\"height: 600px;\"/>\n",
     "\n",
     "Over thousands of trials, two non-human primate subjects (C: left panel & G: right panel) selected between pairs of pictures that represented different juice rewards. We trained a linear decoder to predict the animals' choice behavior (left vs. right picture) from firing rates of striatal (caudate nucelus) neurons. \n",
     "\n",
@@ -86,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1e970af6",
+   "id": "2bfa2f92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08cdff07",
+   "id": "6018f008",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "acb51930",
+   "id": "c3a3aa72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fe2009ad",
+   "id": "8bfaf927",
    "metadata": {
     "scrolled": true
    },
