--- a/hw_2/hw_2.ipynb
+++ b/hw_2/hw_2.ipynb
@@ -335,10 +335,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1476db27",
+   "id": "b57844b1",
    "metadata": {},
    "source": [
-    "I suspect there is a better way to execute this that doesn't require rendering a matplotlib figure for every update. I experimented with bokeh and holovies, but struggled to show these heatmaps and control them dynamically at the same time (features worked separately!). I'll keep working after this homework is due to understand how these two packages talk two each other and jupyter."
+    "I suspect there is a better way to execute this that doesn't require rendering a matplotlib figure for every update. I experimented with bokeh and holovies, but struggled to show these heatmaps and control them dynamically at the same time (features worked separately!). I'll keep working after this homework is due to understand how these two packages talk two each other and jupyter.\n",
+    "\n",
+    "** This feature works in my interactive notebook but doesn't show u"
    ]
   },
   {
