rough version of hw3 prob 1.1

--- a/hw_3/hw_3.ipynb
+++ b/hw_3/hw_3.ipynb
@@ -32,6 +32,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Eventually I'll merge the base calculate from this section with the wolfram update. Untill I get that working, I'll keep a separate copy of the original 1.1 ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting CalCalc_part1.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile CalCalc_part1.py\n",
+    "\"\"\"CalCalc module with some nice methods to evaluate strings (as\n",
+    "numerical expressions only).\n",
+    "\"\"\"\n",
+    "\n",
+    "import argparse\n",
+    "import numexpr as ne\n",
+    "\n",
+    "\n",
+    "def calculate(str_input):\n",
+    "    \"\"\"Evaluate any string, limited to numerical expressions.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    str_input : str\n",
+    "        String expression to evaluate.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    answer : float\n",
+    "        Numeric output of evaluated string.\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # raise error if 'str_input' is not string\n",
+    "    if type(str_input) != str:\n",
+    "        raise ValueError(\"Did not receive string.\")\n",
+    "\n",
+    "    # attempt to evaluate 'str_input' using numexpr\n",
+    "    try:\n",
+    "        answer = ne.evaluate(str_input)\n",
+    "        # TODO: answer is np array, kinda ugly... come back to fix\n",
+    "        return answer\n",
+    "\n",
+    "    except KeyError:\n",
+    "        raise ValueError(\"Could not evaluate with numexpr.\")\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    # parse command line arguements\n",
+    "    parser = argparse.ArgumentParser(description='CalCal Module')\n",
+    "    parser.add_argument('-s', action='store', dest='str_input',\n",
+    "                        help='String to parse')\n",
+    "    results = parser.parse_args()\n",
+    "\n",
+    "    # TODO: try using click instead to make cuter!\n",
+    "\n",
+    "    # execute function\n",
+    "    print(calculate(results.str_input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!flake8 CalCalc_part1.py # looks good!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "952\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python CalCalc_part1.py -s '34*28'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(952, dtype=int32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from CalCalc_part1 import calculate\n",
+    "calculate('34*28')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Add Wolfram\n",
     "\n",
     "To make this more awesome, have your function interact with the Wolfram|Alpha API to ask it what it thinks of the difficult questions.  To make this work, experiment with `urllib2` and a URL like this:\n",
@@ -54,6 +173,273 @@
     ">>> 7.3459e+23\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.3459×10^22 kg (kilograms)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(7.3459e+22)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# figure out how to interact with wolfram first...\n",
+    "import urllib\n",
+    "import numexpr as ne\n",
+    "\n",
+    "# put together query address\n",
+    "url_prefix = 'http://api.wolframalpha.com/v2/query?input=' \n",
+    "query = 'mass of the moon in kg'\n",
+    "query_nice = query.replace('+','%2B').replace(' ','+') # replace numeric '+' symbols; make '+' = space;\n",
+    "query_opts = '&appid=9TLK2V-8T9H43UY82&format=plaintext&includepodid=Result' # reduce output to just results as text\n",
+    "\n",
+    "full_url = url_prefix + query_nice + query_opts\n",
+    "f = urllib.request.urlopen(full_url)\n",
+    "f_as_text = f.read().decode('utf-8')\n",
+    "# print(f_as_text)\n",
+    "\n",
+    "# pull out answer from plaintext section of query output\n",
+    "idx_0 = f_as_text.find('<plaintext>')+11\n",
+    "idx_stop = f_as_text.find('</plaintext>',idx_0)\n",
+    "print(f_as_text[idx_0:idx_stop])\n",
+    "\n",
+    "# turn the first thing into a number\n",
+    "num = f_as_text[idx_0:idx_stop].split(' ')[0]\n",
+    "ne.evaluate(num.replace('×','*').replace('^','**'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's make the fancy function!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting CalCalc.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile CalCalc.py\n",
+    "\"\"\"CalCalc: evaluate strings as numeric expressions. If simple (i.e., no \n",
+    "alpha characters), will try to evaluate locally with numexpr. If more \n",
+    "complex, will try to query wolfram alpha.\n",
+    "\"\"\"\n",
+    "\n",
+    "import argparse\n",
+    "import numexpr as ne\n",
+    "import urllib.request\n",
+    "\n",
+    "\n",
+    "def calculate(str_input, return_float=True):\n",
+    "    \"\"\"Evaluate any string, limited to numerical expressions.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    str_input : str\n",
+    "        String expression to evaluate.\n",
+    "    return_float : bool\n",
+    "        If output should be float (default = True)\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    answer : float\n",
+    "        Numeric output of evaluated string.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # first, are you string?\n",
+    "    if type(str_input) != str:\n",
+    "        raise ValueError(\"You are not a string. Try again.\")\n",
+    "    \n",
+    "    # let's see if numexpr can solve you\n",
+    "    try: \n",
+    "        answer = ne.evaluate(str_input).item()\n",
+    "        return answer \n",
+    "    except (KeyError, SyntaxError) as e: \n",
+    "        \n",
+    "        # ok, let's send you to wolfram\n",
+    "        try: \n",
+    "            answer = query_wolfram(str_input, return_float)\n",
+    "            return answer\n",
+    "        except (ValueError, SyntaxError) as e:\n",
+    "            print(\"Wolfram could not solve query.\")\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "def query_wolfram(str_input, return_float):\n",
+    "    \"\"\"Send off query to wolfram...\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    str_input : str\n",
+    "        String expression to evaluate, e.g. 'mass of moon in kg'\n",
+    "    return_float : bool\n",
+    "        If output should be float (default = True)\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    query_output : str or float\n",
+    "        Full text restult or just float, depending on 'return_float'\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # get query url\n",
+    "    url_prefix = 'http://api.wolframalpha.com/v2/query?input=' \n",
+    "    query = str_input.replace('+', '%2B').replace(' ','+') # replace numeric '+'; use '+' as space;\n",
+    "    return_opts = '&appid=9TLK2V-8T9H43UY82&format=plaintext&includepodid=Result' # reduce output to just results as text\n",
+    "\n",
+    "    full_url = url_prefix + query + return_opts\n",
+    "\n",
+    "    # set off to wolfram!\n",
+    "    output = urllib.request.urlopen(full_url) # request for url\n",
+    "    output_as_text = output.read().decode('utf-8') # turn it into English...\n",
+    "\n",
+    "    # extract answer: for now, just do brute force and find the plaintext tags in the results pod\n",
+    "    # if time, check out beautiful soup?\n",
+    "    idx_plaintext = output_as_text.find('<plaintext>')\n",
+    "    \n",
+    "    if idx_plaintext == -1:\n",
+    "        raise ValueError(\"Don't know how to parse result from wolfram.\")\n",
+    "    \n",
+    "    idx_start = idx_plaintext + 11\n",
+    "    idx_stop = output_as_text.find('</plaintext>',idx_start)\n",
+    "    query_output = output_as_text[idx_start:idx_stop]\n",
+    "    \n",
+    "    if query_output == '(data not available)':\n",
+    "        return ValueError('Wolfram does not know the answer.')\n",
+    "    \n",
+    "    if return_float:\n",
+    "        number = query_output.split(' ')[0]\n",
+    "        number_simple = number.replace('×','*').replace('^','**')\n",
+    "        return ne.evaluate(number_simple).item()\n",
+    "    \n",
+    "    else: \n",
+    "        return query_output\n",
+    "    \n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    # parse command line arguements\n",
+    "    parser = argparse.ArgumentParser(description='CalCal Module')\n",
+    "    parser.add_argument('-s', action='store', dest='str_input',\n",
+    "                        help='String to parse') # use the same flag for all inputs! \n",
+    "    results = parser.parse_args()\n",
+    "\n",
+    "    # TODO: try using click instead to make cuter!\n",
+    "\n",
+    "    # check you got an arg\n",
+    "    if results.str_input == None:\n",
+    "        raise ValueError('feed me a string with -s')\n",
+    "    \n",
+    "    # execute function\n",
+    "    print(calculate(results.str_input))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "952\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python CalCalc.py -s '34*28'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.3459e+22\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python CalCalc.py -s 'mass of the moon in kg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from CalCalc import calculate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(136, dtype=int32)"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate('34*4')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = calculate('mass of the moon in kg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -130,9 +516,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.9 AY250",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ay250"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -144,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.8.0"
   },
   "toc": {
    "base_numbering": 1,
