--- a/hw_3/hw_3.ipynb
+++ b/hw_3/hw_3.ipynb
@@ -32,125 +32,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eventually I'll merge the base calculate from this section with the wolfram update. Untill I get that working, I'll keep a separate copy of the original 1.1 ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting CalCalc_part1.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile CalCalc_part1.py\n",
-    "\"\"\"CalCalc module with some nice methods to evaluate strings (as\n",
-    "numerical expressions only).\n",
-    "\"\"\"\n",
-    "\n",
-    "import argparse\n",
-    "import numexpr as ne\n",
-    "\n",
-    "\n",
-    "def calculate(str_input):\n",
-    "    \"\"\"Evaluate any string, limited to numerical expressions.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    str_input : str\n",
-    "        String expression to evaluate.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    answer : float\n",
-    "        Numeric output of evaluated string.\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # raise error if 'str_input' is not string\n",
-    "    if type(str_input) != str:\n",
-    "        raise ValueError(\"Did not receive string.\")\n",
-    "\n",
-    "    # attempt to evaluate 'str_input' using numexpr\n",
-    "    try:\n",
-    "        answer = ne.evaluate(str_input)\n",
-    "        # TODO: answer is np array, kinda ugly... come back to fix\n",
-    "        return answer\n",
-    "\n",
-    "    except KeyError:\n",
-    "        raise ValueError(\"Could not evaluate with numexpr.\")\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    # parse command line arguements\n",
-    "    parser = argparse.ArgumentParser(description='CalCal Module')\n",
-    "    parser.add_argument('-s', action='store', dest='str_input',\n",
-    "                        help='String to parse')\n",
-    "    results = parser.parse_args()\n",
-    "\n",
-    "    # TODO: try using click instead to make cuter!\n",
-    "\n",
-    "    # execute function\n",
-    "    print(calculate(results.str_input))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!flake8 CalCalc_part1.py # looks good!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "952\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python CalCalc_part1.py -s '34*28'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(952, dtype=int32)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from CalCalc_part1 import calculate\n",
-    "calculate('34*28')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Add Wolfram\n",
     "\n",
     "To make this more awesome, have your function interact with the Wolfram|Alpha API to ask it what it thinks of the difficult questions.  To make this work, experiment with `urllib2` and a URL like this:\n",
@@ -175,66 +56,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 105,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.3459×10^22 kg (kilograms)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(7.3459e+22)"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# figure out how to interact with wolfram first...\n",
-    "import urllib\n",
-    "import numexpr as ne\n",
-    "\n",
-    "# put together query address\n",
-    "url_prefix = 'http://api.wolframalpha.com/v2/query?input=' \n",
-    "query = 'mass of the moon in kg'\n",
-    "query_nice = query.replace('+','%2B').replace(' ','+') # replace numeric '+' symbols; make '+' = space;\n",
-    "query_opts = '&appid=9TLK2V-8T9H43UY82&format=plaintext&includepodid=Result' # reduce output to just results as text\n",
-    "\n",
-    "full_url = url_prefix + query_nice + query_opts\n",
-    "f = urllib.request.urlopen(full_url)\n",
-    "f_as_text = f.read().decode('utf-8')\n",
-    "# print(f_as_text)\n",
-    "\n",
-    "# pull out answer from plaintext section of query output\n",
-    "idx_0 = f_as_text.find('<plaintext>')+11\n",
-    "idx_stop = f_as_text.find('</plaintext>',idx_0)\n",
-    "print(f_as_text[idx_0:idx_stop])\n",
-    "\n",
-    "# turn the first thing into a number\n",
-    "num = f_as_text[idx_0:idx_stop].split(' ')[0]\n",
-    "ne.evaluate(num.replace('×','*').replace('^','**'))\n"
+    "**I integrated 1.1 and 1.1.1 into the same CalCalc.py file below:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# let's make the fancy function!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -251,10 +81,10 @@
     "alpha characters), will try to evaluate locally with numexpr. If more \n",
     "complex, will try to query wolfram alpha.\n",
     "\"\"\"\n",
-    "\n",
     "import argparse\n",
     "import numexpr as ne\n",
     "import urllib.request\n",
+    "import requests\n",
     "\n",
     "\n",
     "def calculate(str_input, return_float=True):\n",
@@ -273,29 +103,30 @@
     "        Numeric output of evaluated string.\n",
     "\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # first, are you string?\n",
     "    if type(str_input) != str:\n",
     "        raise ValueError(\"You are not a string. Try again.\")\n",
-    "    \n",
+    "\n",
     "    # let's see if numexpr can solve you\n",
     "    try: \n",
     "        answer = ne.evaluate(str_input).item()\n",
-    "        return answer \n",
-    "    except (KeyError, SyntaxError) as e: \n",
-    "        \n",
+    "        return answer\n",
+    "    \n",
+    "    except (KeyError, SyntaxError): \n",
+    "\n",
     "        # ok, let's send you to wolfram\n",
     "        try: \n",
     "            answer = query_wolfram(str_input, return_float)\n",
     "            return answer\n",
-    "        except (ValueError, SyntaxError) as e:\n",
+    "        \n",
+    "        except (ValueError, SyntaxError):\n",
     "            print(\"Wolfram could not solve query.\")\n",
-    "        \n",
-    "        \n",
-    "    \n",
+    "\n",
+    "\n",
     "def query_wolfram(str_input, return_float):\n",
     "    \"\"\"Send off query to wolfram...\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    str_input : str\n",
@@ -310,61 +141,89 @@
     "\n",
     "    \"\"\"\n",
     "\n",
-    "    # get query url\n",
-    "    url_prefix = 'http://api.wolframalpha.com/v2/query?input=' \n",
-    "    query = str_input.replace('+', '%2B').replace(' ','+') # replace numeric '+'; use '+' as space;\n",
-    "    return_opts = '&appid=9TLK2V-8T9H43UY82&format=plaintext&includepodid=Result' # reduce output to just results as text\n",
-    "\n",
-    "    full_url = url_prefix + query + return_opts\n",
-    "\n",
-    "    # set off to wolfram!\n",
-    "    output = urllib.request.urlopen(full_url) # request for url\n",
-    "    output_as_text = output.read().decode('utf-8') # turn it into English...\n",
-    "\n",
-    "    # extract answer: for now, just do brute force and find the plaintext tags in the results pod\n",
-    "    # if time, check out beautiful soup?\n",
-    "    idx_plaintext = output_as_text.find('<plaintext>')\n",
+    "    # note: got some help with json from Brooke and https://towardsdatascience.com/build-your-next-project-with-wolfram-alpha-api-and-python-51c2c361d8b9\n",
     "    \n",
-    "    if idx_plaintext == -1:\n",
-    "        raise ValueError(\"Don't know how to parse result from wolfram.\")\n",
+    "    # make query url\n",
+    "    app_id = '9TLK2V-8T9H43UY82'\n",
+    "    query = urllib.parse.quote_plus(str_input)\n",
     "    \n",
-    "    idx_start = idx_plaintext + 11\n",
-    "    idx_stop = output_as_text.find('</plaintext>',idx_start)\n",
-    "    query_output = output_as_text[idx_start:idx_stop]\n",
-    "    \n",
+    "    query_url = f\"http://api.wolframalpha.com/v2/query?\" \\\n",
+    "             f\"appid={app_id}\" \\\n",
+    "             f\"&input={query}\" \\\n",
+    "             f\"&format=plaintext\" \\\n",
+    "             f\"&includepodid=Result\" \\\n",
+    "             f\"&output=json\"\n",
+    "\n",
+    "    # go fetch!\n",
+    "    r = requests.get(query_url).json()\n",
+    "\n",
+    "    # parse the output\n",
+    "    data = r[\"queryresult\"][\"pods\"][0][\"subpods\"][0]\n",
+    "    query_output = data[\"plaintext\"]\n",
+    "\n",
+    "    # wolfram might not know the answer....\n",
     "    if query_output == '(data not available)':\n",
     "        return ValueError('Wolfram does not know the answer.')\n",
-    "    \n",
+    "\n",
+    "    # ...but if it does, split out a float... (could probably make this prettier)\n",
     "    if return_float:\n",
     "        number = query_output.split(' ')[0]\n",
-    "        number_simple = number.replace('×','*').replace('^','**')\n",
+    "        number_simple = number.replace('×', '*').replace('^', '**')\n",
     "        return ne.evaluate(number_simple).item()\n",
-    "    \n",
+    "\n",
+    "    # ... or return the full string result\n",
     "    else: \n",
     "        return query_output\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    # parse command line arguements\n",
     "    parser = argparse.ArgumentParser(description='CalCal Module')\n",
     "    parser.add_argument('-s', action='store', dest='str_input',\n",
-    "                        help='String to parse') # use the same flag for all inputs! \n",
+    "                        help='String to parse')\n",
     "    results = parser.parse_args()\n",
     "\n",
     "    # TODO: try using click instead to make cuter!\n",
     "\n",
     "    # check you got an arg\n",
-    "    if results.str_input == None:\n",
+    "    if results.str_input is None:\n",
     "        raise ValueError('feed me a string with -s')\n",
-    "    \n",
+    "\n",
     "    # execute function\n",
-    "    print(calculate(results.str_input))\n",
-    "    "
+    "    print(calculate(results.str_input))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mreformatted CalCalc.py\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[1mAll done! ✨ 🍰 ✨\u001b[0m\r\n",
+      "\u001b[34m\u001b[1m1 file \u001b[0m\u001b[1mreformatted\u001b[0m.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make everything prettier\n",
+    "!black CalCalc.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check that this works!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,16 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(136, dtype=int32)"
+       "136"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,19 +286,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'7.3459×10^22 kg (kilograms)'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = calculate('mass of the moon in kg')"
+    "calculate('mass of the moon in kg', False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.3459e+23"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate('mass of the moon in kg') * 10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -507,9 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
