added setup files and tests + fixed calcalc after tests

--- a/hw_3/hw_3.ipynb
+++ b/hw_3/hw_3.ipynb
@@ -71,14 +71,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CalCalc.py\n"
+      "Overwriting calcalc/CalCalc.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CalCalc.py\n",
-    "\"\"\"CalCalc: evaluate strings as numeric expressions. If simple (i.e., no \n",
-    "alpha characters), will try to evaluate locally with numexpr. If more \n",
+    "%%writefile calcalc/CalCalc.py\n",
+    "\"\"\"CalCalc: evaluate strings as numeric expressions. If simple (i.e., no\n",
+    "alpha characters), will try to evaluate locally with numexpr. If more\n",
     "complex, will try to query wolfram alpha.\n",
     "\"\"\"\n",
     "import argparse\n",
@@ -109,19 +109,19 @@
     "        raise ValueError(\"You are not a string. Try again.\")\n",
     "\n",
     "    # let's see if numexpr can solve you\n",
-    "    try: \n",
+    "    try:\n",
     "        answer = ne.evaluate(str_input).item()\n",
     "        return answer\n",
-    "    \n",
-    "    except (KeyError, SyntaxError): \n",
+    "\n",
+    "    except (KeyError, SyntaxError):\n",
     "\n",
     "        # ok, let's send you to wolfram\n",
-    "        try: \n",
+    "        try:\n",
     "            answer = query_wolfram(str_input, return_float)\n",
     "            return answer\n",
-    "        \n",
+    "\n",
     "        except (ValueError, SyntaxError):\n",
-    "            print(\"Wolfram could not solve query.\")\n",
+    "            return \"idk\"\n",
     "\n",
     "\n",
     "def query_wolfram(str_input, return_float):\n",
@@ -141,21 +141,27 @@
     "\n",
     "    \"\"\"\n",
     "\n",
-    "    # note: got some help with json from Brooke and https://towardsdatascience.com/build-your-next-project-with-wolfram-alpha-api-and-python-51c2c361d8b9\n",
-    "    \n",
+    "    # note: got some help with json from Brooke and \\\n",
+    "    # https://towardsdatascience.com/build-your-next-\\\n",
+    "    # project-with-wolfram-alpha-api-and-python-51c2c361d8b9\n",
+    "\n",
     "    # make query url\n",
     "    app_id = '9TLK2V-8T9H43UY82'\n",
     "    query = urllib.parse.quote_plus(str_input)\n",
-    "    \n",
+    "\n",
     "    query_url = f\"http://api.wolframalpha.com/v2/query?\" \\\n",
-    "             f\"appid={app_id}\" \\\n",
-    "             f\"&input={query}\" \\\n",
-    "             f\"&format=plaintext\" \\\n",
-    "             f\"&includepodid=Result\" \\\n",
-    "             f\"&output=json\"\n",
+    "        f\"appid={app_id}\" \\\n",
+    "        f\"&input={query}\" \\\n",
+    "        f\"&format=plaintext\" \\\n",
+    "        f\"&includepodid=Result\" \\\n",
+    "        f\"&output=json\"\n",
     "\n",
     "    # go fetch!\n",
     "    r = requests.get(query_url).json()\n",
+    "\n",
+    "    # wolfram might not be able to execute the computation...\n",
+    "    if r[\"queryresult\"]['numpods'] == 0:\n",
+    "        raise ValueError('Wolfram found nothing to compute.')\n",
     "\n",
     "    # parse the output\n",
     "    data = r[\"queryresult\"][\"pods\"][0][\"subpods\"][0]\n",
@@ -163,16 +169,17 @@
     "\n",
     "    # wolfram might not know the answer....\n",
     "    if query_output == '(data not available)':\n",
-    "        return ValueError('Wolfram does not know the answer.')\n",
+    "        raise ValueError('Wolfram does not know the answer.')\n",
     "\n",
-    "    # ...but if it does, split out a float... (could probably make this prettier)\n",
+    "    # ...but if it does, split out a float...\n",
+    "    # (could probably make this prettier)\n",
     "    if return_float:\n",
     "        number = query_output.split(' ')[0]\n",
     "        number_simple = number.replace('×', '*').replace('^', '**')\n",
     "        return ne.evaluate(number_simple).item()\n",
     "\n",
     "    # ... or return the full string result\n",
-    "    else: \n",
+    "    else:\n",
     "        return query_output\n",
     "\n",
     "\n",
@@ -197,28 +204,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mreformatted CalCalc.py\u001b[0m\r\n",
-      "\r\n",
-      "\u001b[1mAll done! ✨ 🍰 ✨\u001b[0m\r\n",
-      "\u001b[34m\u001b[1m1 file \u001b[0m\u001b[1mreformatted\u001b[0m.\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# make everything prettier\n",
-    "!black CalCalc.py"
+    "!flake8 calcalc/CalCalc.py # looks good!\n",
+    "#!black CalCalc.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check that this works!"
+    "**Let's check that this works!**"
    ]
   },
   {
@@ -235,7 +231,7 @@
     }
    ],
    "source": [
-    "!python CalCalc.py -s '34*28'"
+    "!python calcalc/CalCalc.py -s '34*28'"
    ]
   },
   {
@@ -252,7 +248,7 @@
     }
    ],
    "source": [
-    "!python CalCalc.py -s 'mass of the moon in kg'"
+    "!python calcalc/CalCalc.py -s 'mass of the moon in kg'"
    ]
   },
   {
@@ -261,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CalCalc import calculate\n"
+    "from calcalc.CalCalc import calculate"
    ]
   },
   {
@@ -281,7 +277,7 @@
     }
    ],
    "source": [
-    "calculate('34*4')\n"
+    "calculate('34*4')"
    ]
   },
   {
@@ -358,6 +354,139 @@
     "```bash\n",
     "pip install build\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**I copied the example files from the PyPA sample project and modified them for this project.**\n",
+    "\n",
+    "**These are the tests I wrote for calcalc.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting tests/test_calculate.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile tests/test_calculate.py\n",
+    "from unittest import TestCase\n",
+    "from calcalc.CalCalc import calculate\n",
+    "\n",
+    "\n",
+    "def test_easy_operations():\n",
+    "    inputs = [[10, 12],\n",
+    "              [65, 32],\n",
+    "              [0.3, 1.24],\n",
+    "              [2.2, 2]]\n",
+    "    operations = ['+',\n",
+    "                  '-',\n",
+    "                  '*',\n",
+    "                  '/']\n",
+    "    outputs = [22,\n",
+    "               33,\n",
+    "               0.372,\n",
+    "               1.1]\n",
+    "    for (i, xy) in enumerate(inputs):\n",
+    "        xy_as_string = operations[i].join([str(k) for k in xy])\n",
+    "        assert calculate(xy_as_string) == outputs[i]\n",
+    "\n",
+    "\n",
+    "def test_long_operations():\n",
+    "    inputs = ['2 * (3+4)',\n",
+    "              '2 + 3**2 / 3']\n",
+    "    outputs = [14,\n",
+    "               5]\n",
+    "    for (i, xy) in enumerate(inputs):\n",
+    "        assert calculate(xy) == outputs[i]\n",
+    "\n",
+    "\n",
+    "def test_wolfram_string():\n",
+    "    inputs = ['speed of sound in m/s',\n",
+    "              'distance to the moon in feet',\n",
+    "              'distance to the moon in inches']\n",
+    "    outputs = ['340.27 m/s (meters per second)',\n",
+    "               '1.317×10^9 feet',\n",
+    "               '1.58×10^10 inches']\n",
+    "    for (i, xy) in enumerate(inputs):\n",
+    "        assert calculate(xy, return_float=False) == outputs[i]\n",
+    "\n",
+    "\n",
+    "def test_wolfram_float():\n",
+    "    inputs = ['speed of sound in m/s',\n",
+    "              'distance to the moon in feet']\n",
+    "    scale_by = [2,\n",
+    "                0.5]\n",
+    "    outputs = [340.27,\n",
+    "               1.317e9]\n",
+    "    for (i, xy) in enumerate(inputs):\n",
+    "        assert scale_by[i] * calculate(xy) == scale_by[i] * outputs[i]\n",
+    "\n",
+    "\n",
+    "class TestErrorCodes(TestCase):\n",
+    "    def test_bad_inputs(self):\n",
+    "        inputs = [['not a string'],\n",
+    "                  23.2 / 15]\n",
+    "        for i in inputs:\n",
+    "            with self.assertRaises(ValueError):\n",
+    "                calculate(i)\n",
+    "\n",
+    "    def test_nonsense(self):\n",
+    "        inputs = ['gorilla',\n",
+    "                  'mass of a frog',\n",
+    "                  'how to train your dragon']\n",
+    "        for i in inputs:\n",
+    "            self.assertEqual(calculate(i), 'idk')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!flake8 tests/test_calculate.py # looks good!\n",
+    "#!black CalCalc.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.0, pytest-7.0.1, pluggy-1.0.0 -- /Users/ziu/Projects/python-ay250-homework/env/bin/python3.8\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/ziu/Projects/python-ay250-homework/hw_3\n",
+      "collected 6 items                                                              \u001b[0m\n",
+      "\n",
+      "tests/test_calculate.py::test_easy_operations \u001b[32mPASSED\u001b[0m\u001b[32m                     [ 16%]\u001b[0m\n",
+      "tests/test_calculate.py::test_long_operations \u001b[32mPASSED\u001b[0m\u001b[32m                     [ 33%]\u001b[0m\n",
+      "tests/test_calculate.py::test_wolfram_string \u001b[32mPASSED\u001b[0m\u001b[32m                      [ 50%]\u001b[0m\n",
+      "tests/test_calculate.py::test_wolfram_float \u001b[32mPASSED\u001b[0m\u001b[32m                       [ 66%]\u001b[0m\n",
+      "tests/test_calculate.py::TestErrorCodes::test_bad_inputs \u001b[32mPASSED\u001b[0m\u001b[32m          [ 83%]\u001b[0m\n",
+      "tests/test_calculate.py::TestErrorCodes::test_nonsense \u001b[32mPASSED\u001b[0m\u001b[32m            [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m6 passed\u001b[0m\u001b[32m in 6.83s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest tests/test_calculate.py --verbose"
    ]
   },
   {
