updated test bc wolfram gave inconsistent answers for distance to the moon...

--- a/hw_3/hw_3.ipynb
+++ b/hw_3/hw_3.ipynb
@@ -413,22 +413,22 @@
     "\n",
     "def test_wolfram_string():\n",
     "    inputs = ['speed of sound in m/s',\n",
-    "              'distance to the moon in feet',\n",
-    "              'distance to the moon in inches']\n",
+    "              'speed of light in m/s',\n",
+    "              'speed of light in ft/min']\n",
     "    outputs = ['340.27 m/s (meters per second)',\n",
-    "               '1.317×10^9 feet',\n",
-    "               '1.58×10^10 inches']\n",
+    "               '2.998×10^8 m/s (meters per second)',\n",
+    "               '5.901×10^10 ft/min (feet per minute)']\n",
     "    for (i, xy) in enumerate(inputs):\n",
     "        assert calculate(xy, return_float=False) == outputs[i]\n",
     "\n",
     "\n",
     "def test_wolfram_float():\n",
     "    inputs = ['speed of sound in m/s',\n",
-    "              'distance to the moon in feet']\n",
+    "              'speed of light in ft/min']\n",
     "    scale_by = [2,\n",
     "                0.5]\n",
     "    outputs = [340.27,\n",
-    "               1.317e9]\n",
+    "               5.901e10]\n",
     "    for (i, xy) in enumerate(inputs):\n",
     "        assert scale_by[i] * calculate(xy) == scale_by[i] * outputs[i]\n",
     "\n",
@@ -481,7 +481,7 @@
       "tests/test_calculate.py::TestErrorCodes::test_bad_inputs \u001b[32mPASSED\u001b[0m\u001b[32m          [ 83%]\u001b[0m\n",
       "tests/test_calculate.py::TestErrorCodes::test_nonsense \u001b[32mPASSED\u001b[0m\u001b[32m            [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m6 passed\u001b[0m\u001b[32m in 6.83s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m6 passed\u001b[0m\u001b[32m in 8.32s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
      ]
     }
    ],
@@ -499,11 +499,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**I copied the GitHub actions yml file from PyAdder and modified it for this project.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[My GitHub actions page](https://github.com/zbalewski/python-ay250-homework/actions) "
+   ]
   },
   {
    "cell_type": "markdown",
