--- a/hw_4/hw_4_parallelism.ipynb
+++ b/hw_4/hw_4_parallelism.ipynb
@@ -129,7 +129,11 @@
    "id": "4ca1cb64",
    "metadata": {},
    "source": [
-    "Make parallelizations to throw darts."
+    "Make parallelizations to throw darts.\n",
+    "\n",
+    "Some notes:\n",
+    "\n",
+    "- For my first attempt at concurrent I tried to parallelize at the level of individual throws "
    ]
   },
   {
