--- a/hw_5/hw_5.ipynb
+++ b/hw_5/hw_5.ipynb
@@ -808,7 +808,7 @@
    "id": "acef88a2",
    "metadata": {},
    "source": [
-    "This is the correlation of max temperature and precipitation between all airports (with no lag)."
+    "**This is the correlation of max temperature and precipitation between all airports (with no lag):**"
    ]
   },
   {
@@ -861,7 +861,7 @@
    "id": "bb6647fb",
    "metadata": {},
    "source": [
-    "This is the correlation of max temperature between all airports with lags of 1, 3, or 7 days (columns = shifted before rows)."
+    "**This is the correlation of max temperature between all airports with lags of 1, 3, or 7 days (columns = shifted before rows):**"
    ]
   },
   {
@@ -903,7 +903,7 @@
    "id": "72725e30",
    "metadata": {},
    "source": [
-    "This is the correlation of precipitation between all airports with lags of 1, 3, or 7 days (columns = shifted before rows)."
+    "**This is the correlation of precipitation between all airports with lags of 1, 3, or 7 days (columns = shifted before rows):**"
    ]
   },
   {
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9fc65d6",
+   "id": "2eb1c209",
    "metadata": {},
    "outputs": [],
    "source": []
