hw 8a fixed units

--- a/hw_8/hw_8_notebook.ipynb
+++ b/hw_8/hw_8_notebook.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e3fb9ea",
+   "id": "648c08a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "2c67fa21",
+   "id": "7e541d5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "246379e3",
+   "id": "e744aa7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "cf0238aa",
+   "id": "764df018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "e835d52c",
+   "id": "12da2a03",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "5af555a1",
+   "id": "f67ad87a",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "1383cd8e",
+   "id": "2cfb8d6c",
    "metadata": {
     "scrolled": true
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d6dd39",
+   "id": "cc05b893",
    "metadata": {},
    "source": [
     "Looks good! Now let's write a function that will perform this procedure for the observed x and y positions for both the red and blue object."
@@ -710,9 +710,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14d1072d",
+   "metadata": {},
+   "source": [
+    "**Show the posterior distributions for speed of each object:**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 256,
-   "id": "6bae7fed",
+   "execution_count": 257,
+   "id": "fd4f5c9b",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +729,7 @@
        "Text(0, 0.5, 'P(blue speed)')"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -742,7 +750,7 @@
     "fig = plt.figure(figsize=(10, 4))\n",
     "\n",
     "ax_r = fig.add_subplot(1, 2, 1)\n",
-    "red_speed = np.sqrt(V_red_x ** 2 + V_red_y ** 2)\n",
+    "red_speed = np.sqrt(V_red_x ** 2 + V_red_y ** 2) * \n",
     "ax_r.hist(red_speed, color=\"r\")\n",
     "ax_r.set_xlabel(\"red speed (m / s)\")\n",
     "ax_r.set_ylabel(\"P(red speed)\")\n",
