--- a/final_project/example_notebook.ipynb
+++ b/final_project/example_notebook.ipynb
@@ -46,6 +46,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05cd0054",
+   "metadata": {},
+   "source": [
+    "Repo for ephys pipeline (includes tests):\n",
+    "[ephyspipe](https://github.com/zbalewski/friendly-enigma)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2bb7ac2f",
