--- a/final_project/example_notebook.ipynb
+++ b/final_project/example_notebook.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05cd0054",
+   "id": "cea4a793",
    "metadata": {},
    "source": [
     "Repo for ephys pipeline (includes tests):\n",
@@ -214,6 +214,28 @@
     "                                        pl2_codes, \n",
     "                                        code_pictures)\n",
     "ntrials = sync_pictures_ts.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d70530f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([127.87405 , 136.371025, 140.936075, ...,  -1.      ,  -1.      ,\n",
+       "        -1.      ])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sync_pictures_ts"
    ]
   },
   {
@@ -727,12 +749,12 @@
    "source": [
     "%%time\n",
     "time_window = (-1, 2)  # in sec, time around each event\n",
-    "ts_chopped = np.arange(time_window[0], \n",
-    "                       time_window[1], 0.001)  # new time axis\n",
     "\n",
     "spk_train_chopped = brain.chop(spk_train, sync_pictures_ts, time_window)\n",
     "spk_fr_chopped = brain.chop(spk_fr, sync_pictures_ts, time_window)\n",
     "\n",
+    "ts_chopped = np.arange(time_window[0], \n",
+    "                       time_window[1], 0.001)  # new time axis\n",
     "print(spk_fr_chopped.shape)"
    ]
   },
@@ -1300,7 +1322,7 @@
    "id": "fecb6d44",
    "metadata": {},
    "source": [
-    "Compare to the same results from data processed and visualized entirely with the old matlab pipleine:\n",
+    "Compare to the same results from data processed and visualized entirely with the old matlab pipeline:\n",
     "\n",
     "<img src=\"https://github.com/zbalewski/python-ay250-homework/blob/main/final_project/sample_units.png?raw=true\" alt=\"matlab results\"/>"
    ]
